--- a/app/src/main/res/layout/add_to_shop_button.xml
+++ b/app/src/main/res/layout/add_to_shop_button.xml
@@ -33,7 +33,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SHOP"
+                android:text="DESK"
                 android:fontFamily="@font/product_sans_bold"
                 android:textColor="@android:color/black"
                 android:layout_marginStart="6dp"
