fix colors and color heart icon, developing creator detail screen

--- a/app/src/main/res/drawable/bg_gradient_bottom_nav.xml
+++ b/app/src/main/res/drawable/bg_gradient_bottom_nav.xml
@@ -4,7 +4,7 @@
         <shape>
             <gradient
                 android:startColor="@color/black"
-                android:endColor="@color/darkGrey"
+                android:endColor="#263238"
                 android:angle="90"/>
         </shape>
     </item>
