--- a/app/src/main/res/layout/activity_creator.xml
+++ b/app/src/main/res/layout/activity_creator.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/mid_black">
+        android:background="@android:color/black">
 
         <include
             android:id="@+id/toolbar_creator_detail"
