starting changes with navigation and fragments

--- a/app/src/main/res/layout/activity_creator_detail.xml
+++ b/app/src/main/res/layout/activity_creator_detail.xml
@@ -54,7 +54,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="parent"
-                            tools:background="@drawable/ironman" />
+                            tools:background="@drawable/profile" />
 
 
                     </FrameLayout>
