--- a/app/src/main/res/layout/fragment_home_desk.xml
+++ b/app/src/main/res/layout/fragment_home_desk.xml
@@ -33,7 +33,8 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                     <TextView
                         android:id="@+id/label_characters_list"
@@ -69,7 +70,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
 
                     <TextView
@@ -107,7 +109,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
 
                     <TextView
@@ -144,7 +147,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="16dp"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
 
                     <TextView
@@ -182,6 +186,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No elements saved yet"
+            tools:visibility="gone"
             android:textColor="@android:color/white"
             android:fontFamily="@font/product_sans_italic"
             app:layout_constraintTop_toTopOf="parent"
@@ -197,7 +202,7 @@
             android:indeterminateDrawable="@drawable/custom_progress_loader"
             android:progress="25"
             android:visibility="gone"
-            tools:visibility="visible"
+            tools:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
