--- a/app/src/main/res/layout/fragment_more_info.xml
+++ b/app/src/main/res/layout/fragment_more_info.xml
@@ -37,6 +37,8 @@
             android:id="@+id/list_rows_creators"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            tools:listitem="@layout/creator_row"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line"
