--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -33,6 +33,7 @@
                     android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    tools:background="@drawable/ironman"
                     android:src="@drawable/ironman"
                     app:imageUrl="@{vModel.imageUrl}"
                     android:transitionName="@string/transition_character_image"
