--- a/app/src/main/res/layout/item_more_gallery.xml
+++ b/app/src/main/res/layout/item_more_gallery.xml
@@ -43,7 +43,7 @@
                     app:galleryImageUrl="@{url}"
                     android:scaleType="fitXY"
                     android:contentDescription="@string/image_gallery_content_descriptor"
-                    tools:src="@drawable/margeto" />
+                    tools:src="@drawable/spiderman_comic" />
 
             </FrameLayout>
 
