--- a/app/src/main/res/layout/fragment_home_characters.xml
+++ b/app/src/main/res/layout/fragment_home_characters.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/black">
 
+
+        <!-- android:layoutAnimation="@anim/layout_animation_slide_bottom" -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_characters"
             android:layout_width="0dp"
@@ -18,8 +20,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layoutAnimation="@anim/layout_animation_slide_bottom"/>
+            tools:listitem="@layout/item_character"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 
         <ProgressBar
