--- a/app/src/main/res/layout/fragment_home_comics.xml
+++ b/app/src/main/res/layout/fragment_home_comics.xml
@@ -97,6 +97,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/line_sep"
+                    tools:listitem="@layout/item_comic"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:layoutAnimation="@anim/layout_animation_slide_bottom"/>
 
