--- a/app/src/main/res/layout/fragment_more_gallery.xml
+++ b/app/src/main/res/layout/fragment_more_gallery.xml
@@ -53,26 +53,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="horizontal"
+            tools:listitem="@layout/item_more_gallery"
             app:layout_constraintTop_toBottomOf="@+id/line"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="15dp"/>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:progress="25"
-            android:indeterminate="true"
-            android:indeterminateDrawable="@drawable/custom_progress_loader"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/line"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="gone"/>
+
 
 
 
