--- a/app/src/main/res/menu/menu_home_toolbar.xml
+++ b/app/src/main/res/menu/menu_home_toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_search"
+        android:id="@+id/fragmentSearchScreen"
         android:orderInCategory="300"
         android:title="User"
         android:icon="@drawable/ic_search"
