last changes, but it seems not a good solution for view pager

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,6 +12,9 @@
         <action
             android:id="@+id/action_fragmentSplashScreen_to_fragmentHome"
             app:destination="@id/fragmentHome" />
+        <action
+            android:id="@+id/action_fragmentSplashScreen_to_homeCharactersFragment"
+            app:destination="@id/homeCharactersFragment" />
     </fragment>
     <fragment
         android:id="@+id/fragmentHome"
