starting login screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="black">#000000</color>
     <color name="black85">#D9000000</color>
     <color name="black60">#66000000</color>
+    <color name="black65">#BF000000</color>
     <color name="mid_black">#191919</color>
     <color name="top_black">#323232</color>
     <color name="darkGrey">#616161</color>
